RESOLVED FIXED104935
ResourceLoader::didReceiveAuthenticationChallenge uses a wrong client
https://bugs.webkit.org/show_bug.cgi?id=104935
Summary ResourceLoader::didReceiveAuthenticationChallenge uses a wrong client
Alexey Proskuryakov
Reported 2012-12-13 11:21:36 PST
ResourceLoader::didReceiveAuthenticationChallenge uses handle() as client, but that's not always correct. The handle may be null. <rdar://problem/12870361>
Attachments
proposed fix (1.72 KB, patch)
2012-12-13 11:25 PST, Alexey Proskuryakov
andersca: review+
Alexey Proskuryakov
Comment 1 2012-12-13 11:25:26 PST
Created attachment 179306 [details] proposed fix
Alexey Proskuryakov
Comment 2 2012-12-13 11:47:25 PST
Note You need to log in before you can comment on or make changes to this bug.