        ResourceLoader::didReceiveAuthenticationChallenge uses a wrong client         https://bugs.webkit.org/show_bug.cgi?id=104935         <rdar://problem/12870361>

Reviewed by Anders Carlsson.

        * loader/ResourceLoader.cpp: (WebCore::ResourceLoader::didReceiveAuthenticationChallenge):
        The handle is null when NetworkProcess is used. In any case, it should be correct
        to use the client carried within AuthenticationChallenge.



Canonical link: https://commits.webkit.org/123164@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137631 268f45cc-cd09-0410-ab3c-d52691b4dbfc